Regression: Spacebar while editing strings sets cursor to start #113735

Closed
opened 2023-10-15 08:44:28 +02:00 by Lukas Tönne · 1 comment
Member

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.6.14802 Core Profile Context 21.40.64.06 30.0.14064.6002

Blender Version
Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
While editing any string, pressing the spacebar will set the cursor to the beginning of the string.
Space token is added in the correct place and it continues as normal, seems to be just a visual bug.
Tested with object names, outliner, node frames, ...

Exact steps for others to reproduce the error

  • Press F2 to edit the default cube name.
  • Enter some non-space tokens.
  • Press space or backspace, cursor temporarily moves to beginning of the string.
  • Enter more tokens, cursor moves to the back of the string again.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.6.14802 Core Profile Context 21.40.64.06 30.0.14064.6002 **Blender Version** Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** While editing any string, pressing the spacebar will set the cursor to the beginning of the string. Space token is added in the correct place and it continues as normal, seems to be just a visual bug. Tested with object names, outliner, node frames, ... **Exact steps for others to reproduce the error** - Press F2 to edit the default cube name. - Enter some non-space tokens. - Press space or backspace, cursor temporarily moves to beginning of the string. - Enter more tokens, cursor moves to the back of the string again.
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-15 08:44:29 +02:00
Iliya Katushenock changed title from Spacebar while editing strings sets cursor to start to Regression: Spacebar while editing strings sets cursor to start 2023-10-15 11:32:20 +02:00

@Harley /^

@Harley /^
Harley Acheson self-assigned this 2023-10-15 16:31:00 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-15 17:42:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113735
No description provided.